--- a/Invoice/biller/templates/layout.html
+++ b/Invoice/biller/templates/layout.html
@@ -30,7 +30,7 @@
                             <a class="nav-link" href="{% url "Add Product" %}">Products</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Customers</a>
+                            <a class="nav-link" href="{% url "Add Customer" %}">Customers</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Billing</a>
