--- a/Invoice/biller/templates/addproduct/productcard.html
+++ b/Invoice/biller/templates/addproduct/productcard.html
@@ -13,8 +13,8 @@
                 <label class="text-muted float-sm-start float-md-end">Price:{{product.price}} per {{product.unit}}</label>     
              </div>
             <div class="d-flex justify-content-evenly mb-3">
-                    <button class="btn btn-success w-25">View</button>
-                    <button class="btn btn-info w-25"><img width="20" height="20" src="https://img.icons8.com/color/48/pencil--v1.png" alt="pencil--v1"/>   Edit</button>
+                    <button class="btn btn-success w-25" data-name="{{product.name}}">View</button>
+                    <button class="btn btn-info w-25" data-name="{{product.name}}" ><img width="20" height="20" src="https://img.icons8.com/color/48/pencil--v1.png" alt="pencil--v1"/>   Edit</button>
                     <button class="btn btn-danger w-25" data-name="{{product.name}}">Delete</button>
             </div>
         </div>
