--- a/Invoice/biller/templates/layout.html
+++ b/Invoice/biller/templates/layout.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
         <link rel="stylesheet" href="{% static "sweetalert/sweetalert2.min.css" %}">
+        <link rel="stylesheet" href="{% static "css/sitestyle.css" %}">
         <style>
         .btn-main{
             background-color:#A020F0;
@@ -14,8 +15,8 @@
     </style>
         </head>
     
-    <body style="background-color: #d6d5d5e8;">
-        <nav class="navbar navbar-expand-lg shadow-lg  bg-light">
+    <body>
+        <nav class="navbar navbar-expand-lg shadow-lg bg-transparent navbar-dark" >
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">Biller</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
